feat(contracts): schemas + openapi updates
